# dbot_platform

./: .gitignore  README.md  deskbot_v3.py  main.py  pyproject.toml  requirements.txt
alerts/: alert_manager.py
analytics/: session_manager.py
api/: routes.py
camera/: camera_manager.py
config/: defaults.py  models_manifest.json  settings.py  settings_manager.py
core/: biometrics.py  hardware_pipeline.py  inference.py  ingestion.py  model_manager.py  tracking.py  tracking_monolithic.py
core/tracking/: __init__.py  geometry.py  orchestrator.py  state.py
data/: settings.json
database/: crud.py
detection/: person_detector.py
models/: face_detector.data  face_detector.onnx  face_landmark_detector.data  face_landmark_detector.onnx  metadata.json
posture/: angle_calculator.py  correction_engine.py  posture_analyzer.py
recognition/: face_recognizer.py
templates/: configuration.html  dashboard.html
tests/: audio_test.py  test_integration.py  test_unit.py
utils/: hardware.py
