[project]
name = "dbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.7.0.72",
    "numpy>=1.23.0",
    "ultralytics>=8.1.2",
    "flask>=2.3.3",
    "ultralytics-thop>=2.0.5",
    "psutil>=7.0.0",
    "scipy>=1.10.0",
    "onnxruntime>=1.27.0",
    "pyttsx3>=2.90",
    "torch-directml>=0.2.5.dev240914",
    "onnxruntime-directml>=1.24.4",
    "pypiwin32>=223",
    "opencv-contrib-python",
]